@startuml diagrama_relacional
skinparam linetype ortho
skinparam tableBackgroundColor #F0F8FF
skinparam tableBorderColor #4A90D9
skinparam arrowColor #2E86C1
skinparam noteBackgroundColor #FEF9E7
skinparam noteBorderColor #F39C12

title Apptism — Diagrama Relacional (Esquema de Base de Datos)

' ─── TABLAS ──────────────────────────────────────────────────

entity "usuarios" as usuarios {
    * id : BIGINT <<PK>> <<AUTO_INCREMENT>>
    --
    * email : VARCHAR(255) <<UNIQUE>>
    * password : VARCHAR(255)
    * rol : ENUM(NINO, PADRE, PROFESOR, ADMIN)
    * nombre : VARCHAR(255)
    fecha_nacimiento : DATE
    puntos_acumulados : INT DEFAULT 0
}

entity "tutores_ninos" as tutores_ninos {
    * tutor_id : BIGINT <<FK>>
    * nino_id  : BIGINT <<FK>>
}

entity "tareas" as tareas {
    * id : BIGINT <<PK>> <<AUTO_INCREMENT>>
    --
    * titulo : VARCHAR(255)
    descripcion : TEXT
    categoria : ENUM(MATEMATICAS, LENGUA, ARTE, JUEGO, HABITOS)
    puntos_por_completar : INT DEFAULT 10
    completada : BOOLEAN DEFAULT false
    fecha_programada : DATETIME
    * nino_id : BIGINT <<FK>>
    creador_id : BIGINT <<FK>>
}

entity "rutinas" as rutinas {
    * id : BIGINT <<PK>> <<AUTO_INCREMENT>>
    --
    * nombre : VARCHAR(255)
    * zona_horaria : ENUM(MANANA, MEDIODIA, NOCHE)
    pictograma_url : VARCHAR(500)
    completada : BOOLEAN DEFAULT false
    orden : INT
    * nino_id : BIGINT <<FK>>
    creador_id : BIGINT <<FK>>
}

entity "pasos_rutina" as pasos_rutina {
    * id : BIGINT <<PK>> <<AUTO_INCREMENT>>
    --
    * descripcion : VARCHAR(255)
    pictograma_url : VARCHAR(500)
    orden : INT
    completado : BOOLEAN DEFAULT false
    * rutina_id : BIGINT <<FK>>
}

entity "recompensas" as recompensas {
    * id : BIGINT <<PK>> <<AUTO_INCREMENT>>
    --
    * descripcion : VARCHAR(255)
    * puntos_necesarios : INT
    pictograma_url : VARCHAR(500)
    activa : BOOLEAN DEFAULT true
    familia_id : BIGINT <<FK>>
}

entity "solicitudes_canje" as solicitudes_canje {
    * id : BIGINT <<PK>> <<AUTO_INCREMENT>>
    --
    estado : ENUM(PENDIENTE, APROBADA, RECHAZADA) DEFAULT PENDIENTE
    leida : BOOLEAN DEFAULT false
    fecha : DATETIME DEFAULT NOW()
    * nino_id : BIGINT <<FK>>
    * recompensa_id : BIGINT <<FK>>
}

entity "registros_emocionales" as registros_emocionales {
    * id : BIGINT <<PK>> <<AUTO_INCREMENT>>
    --
    * emocion : ENUM(FELIZ, TRISTE, ENFADADO, MIEDO, CALMA, IRA)
    intensidad : INT [1-5]
    fecha : DATETIME DEFAULT NOW()
    * nino_id : BIGINT <<FK>>
}

entity "mensajes" as mensajes {
    * id : BIGINT <<PK>> <<AUTO_INCREMENT>>
    --
    pictograma_url : VARCHAR(500)
    texto_pictograma : VARCHAR(255)
    tipo : ENUM(EMOCION, CHAT)
    leido : BOOLEAN DEFAULT false
    fecha : DATETIME DEFAULT NOW()
    * emisor_id : BIGINT <<FK>>
    * receptor_id : BIGINT <<FK>>
}

' ─── RELACIONES ──────────────────────────────────────────────

usuarios        ||--o{ tutores_ninos        : "tutor_id"
usuarios        ||--o{ tutores_ninos        : "nino_id"

usuarios        ||--o{ tareas               : "nino_id"
usuarios        ||--o{ tareas               : "creador_id"

usuarios        ||--o{ rutinas              : "nino_id"
usuarios        ||--o{ rutinas              : "creador_id"

rutinas         ||--|{ pasos_rutina         : "rutina_id"

usuarios        ||--o{ recompensas          : "familia_id"

usuarios        ||--o{ solicitudes_canje    : "nino_id"
recompensas     ||--o{ solicitudes_canje    : "recompensa_id"

usuarios        ||--o{ registros_emocionales : "nino_id"

usuarios        ||--o{ mensajes             : "emisor_id"
usuarios        ||--o{ mensajes             : "receptor_id"

@enduml
